--- a/css/css3.css
+++ b/css/css3.css
@@ -480,9 +480,11 @@ body{font-size: 16px; overflow-y: scroll;background: #fff;height: 100%; font-fam
 }
 
 .sub_th_1{
-	position: relative;
-	z-index: 2;
+	position: absolute;
+	z-index: 0;
 	height: 100%;
+	width: 100%;
+	top: 0;
 }
 
 .sub_th_sb{
